--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+haszn-ltauto.Rproj
 
 # R Environment Variables
 .Renviron
